<resources>
    <string name="app_name">LeTran_CE06</string>
    <string name="action_settings">Settings</string>
    <string name="imageView">Image Holder</string>
    <string name="empty_contact">Try adding some new connections</string>
    <string name="first_hint">First Name</string>
    <string name="second_hint">Last Name</string>
    <string name="third_hint">Phone Number</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone">Phone Number:</string>
    <string name="back_button">Back</string>
    <string name="error_empty">Field is empty</string>
</resources>
